force-app/main/default/objects/Case_Internal_Comment__c/fields/Auto_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Auto_Next_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Next Step</label>
    <type>Checkbox</type>
</CustomField>