force-app/main/default/objects/Case_Internal_Comment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Internal Comment</relationshipLabel>
    <relationshipName>Case_Internal_Comment</relationshipName>
    <type>Lookup</type>
</CustomField>