force-app/main/default/objects/Case_Internal_Comment__c/fields/Case_Next_Department__c.field-meta.xml
<CustomField>
    <fullName>Case_Next_Department__c</fullName>
    <label>Case Next Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>