force-app/main/default/objects/Case_Internal_Comment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To (Department2)</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Case Internal Comment</relationshipLabel>
    <relationshipName>Case_Internal_Comment</relationshipName>
    <type>Lookup</type>
</CustomField>