force-app/main/default/objects/Case_Internal_Comment__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>To (Department)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>Orphan</fullName>
            </value>
            <value>
                <fullName>VDM</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Agency Health</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Broker Health</fullName>
            </value>
            <value>
                <fullName>Broker Non Health</fullName>
            </value>
            <value>
                <fullName>Claim Health Anlys 1</fullName>
            </value>
            <value>
                <fullName>Claim Health Anlys 2</fullName>
            </value>
            <value>
                <fullName>Claim Health QC</fullName>
            </value>
            <value>
                <fullName>Claim Health Reg</fullName>
            </value>
            <value>
                <fullName>Claim Lifestyle</fullName>
            </value>
            <value>
                <fullName>Claim Marine</fullName>
            </value>
            <value>
                <fullName>Claim MV</fullName>
            </value>
            <value>
                <fullName>Claim Property</fullName>
            </value>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>Credit Control</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct Health</fullName>
            </value>
            <value>
                <fullName>Direct Team</fullName>
            </value>
            <value>
                <fullName>Health CR</fullName>
            </value>
            <value>
                <fullName>Health Retail</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>