force-app/main/default/objects/Case_Internal_Comment__c/fields/Entity_F__c.field-meta.xml
<CustomField>
    <fullName>Entity_F__c</fullName>
    <formula>TEXT(Case__r.Entity_Backup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity_F</label>
    <type>Text</type>
</CustomField>