force-app/main/default/objects/Case_Internal_Comment__c/fields/Escalated_Step__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Step__c</fullName>
    <label>Escalated Step</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>