force-app/main/default/objects/Case_Internal_Comment__c/fields/Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment__c</fullName>
    <label>Internal Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>