force-app/main/default/objects/Case_Internal_Comment__c/fields/Named_User__c.field-meta.xml
<CustomField>
    <fullName>Named_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From (Named User)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Named_User__c.User__r.Username</field>
            <operation>equals</operation>
            <valueField>$User.Username</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Named_User__c</referenceTo>
    <relationshipLabel>Case Internal Comment</relationshipLabel>
    <relationshipName>Case_Internal_Comment</relationshipName>
    <type>Lookup</type>
</CustomField>