force-app/main/default/objects/Case_Internal_Comment__c/fields/Named_User_F__c.field-meta.xml
<CustomField>
    <fullName>Named_User_F__c</fullName>
    <formula>Named_User__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Named User F</label>
    <type>Text</type>
</CustomField>