force-app/main/default/objects/Case_Internal_Comment__c/fields/Next_Department__c.field-meta.xml
<CustomField>
    <fullName>Next_Department__c</fullName>
    <label>Next Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>